[tool.poetry]
name = "psdomain"
version = "0.1.0"
description = "Domain Model for PromoStandards in Python"
authors = ["Edilio Gallardo <edilio@gallardo.solutions>"]
readme = "README.md"

packages = [
    { include = "psdomain", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.9.1"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
