[tool.poetry]
name = "psdomain"
version = "0.1.0"
description = "Domain Model for PromoStandards in Python"
authors = ["Edilio Gallardo <edilio@gallardo.solutions>"]
readme = "README.md"

packages = [
    { include = "psdomain", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12.0, <4.0.0"
pydantic = {extras = ["email"], version = "^2.9.1"}
protobuf = "^6.33.5"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
